--- a/flexbox/13-article.html
+++ b/flexbox/13-article.html
@@ -100,7 +100,7 @@
                     <strong>Tags:</strong>
                     <ul class="tag-list">
                       <li><a href="#" rel="tag">Web Design</a></li>
-                      <li><a href="#" rel="tag"></a>UX</li>
+                      <li><a href="#" rel="tag">UX</a></li>
                     </ul>
                   </li>
                 </ul>
